@@ -367,6 +367,9 @@ New in v0.7.08 (2016/07/02)
     characters and to make the transition to Python 3 significantly easier, primarily
     on the 'local' side of duplicity (selection, commandline arguments etc) rather
     than any backends etc.
+* Fixes so pylint 1.8.1 does not complain about missing conditional imports.
+  - Fix dpbxbackend so that imports require instantiation of the class.
+  - Added pylint: disable=import-error to a couple of conditional imports
 
 
 New in v0.7.07.1 (2016/04/19)
